--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url=jdbc:mysql://springboot-db.cqbktc5q43ki.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
-spring.datasource.username=admin
-spring.datasource.password=sparta123
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://springboot-db.cqbktc5q43ki.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
+#spring.datasource.username=admin
+#spring.datasource.password=sparta123
+#spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:springcoredb
+spring.datasource.username=sa
+spring.datasource.password=
